# LayDraw

./: .gitignore  Cargo.toml  README.md  README.zh-cn.md
laydraw_app/: Cargo.toml  build.rs
laydraw_app/src/: main.rs
plugin_packages/example_package_plugin/: Cargo.toml  laydraw-plugin.toml
plugin_packages/example_package_plugin/src/: lib.rs
src/: algorithm.rs  constants.rs  image_io.rs  lib.rs  plugins.rs  source.rs
src/canvas/: mod.rs
src/i18n/: en_us.rs  mod.rs  zh_cn_simple.rs
src/tools/: eraser.rs  fill.rs  magnifier.rs  mod.rs  pencil.rs  picker.rs  select.rs  text.rs
src/tools/brush/: calligraphy.rs  common.rs  crayon.rs  marker.rs  mod.rs  natural_pencil.rs  oil.rs  pencil.rs  spray.rs  watercolor.rs
src/tools/shape/: curve.rs  ellipse.rs  lighting.rs  line.rs  mod.rs  polygon.rs  rect.rs
src/ui/: cursor.rs  mod.rs  ribbon_tab.rs
src/ui/panel/: app.rs  builtin.rs  mod.rs
src/ui/panel/app/: builtin.rs
src/ui/panel/builtin/: status.rs
