[package]
name = "laydraw"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "laydraw_app", "plugin_packages/example_package_plugin"]
default-members = ["laydraw_app"]
resolver = "2"

[dependencies]
ab_glyph = "0.2"
arboard = "3.6.1"
eframe = "0.28" 
egui = "0.28"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "webp"] }
rfd = "0.14"  
ttf-parser = "0.25"

[target.'cfg(windows)'.dependencies]
clipboard-win = "5.4.1"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
panic = "abort"
strip = true
